added Blazor Web Assembly UI for snake game

--- a/Dotnet.Blazor.SnakeGame.UI/wwwroot/index.html
+++ b/Dotnet.Blazor.SnakeGame.UI/wwwroot/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dotnet.Blazor.SnakeGame</title>
+    <title>Dotnet.Blazor.SnakeGame.UI</title>
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="Dotnet.Blazor.SnakeGame.styles.css" rel="stylesheet" />
+    <link href="Dotnet.Blazor.SnakeGame.UI.styles.css" rel="stylesheet" />
+    <script src="scripts/keyHandler.js"></script>
 </head>
 
 <body>
